# turtle_3d

./: CMakeLists.txt  README.md  package.xml
launch/: main.launch.xml  main_no_tfs.launch.xml  spawn_cam_bot.launch.py  spawn_cam_bot_no_odom_tf.launch.py  spawn_turtle.launch.py  spawn_turtle_no_static.launch.py  start_world.launch.py  start_world_sea.launch.py
models/ocean_plane/: model.config  model.sdf
rviz_config/: main.rviz
scripts/: basic_client_test.py  basic_publisher_circle.py  cam_bot_force.py  cam_bot_odom_to_tf_pub.py  move_generic_model.py  static_broadcaster_test.py
urdf/: camera_bot.urdf  turtle.urdf
worlds/: turtle_empty.world  turtle_sea.world
